err/grader.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/grader'...
Compiling './lib/python3.5/site-packages/grader/configobj.py'...
***   File "./lib/python3.5/site-packages/grader/configobj.py", line 1644
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/grader/grader.py'...
***   File "./lib/python3.5/site-packages/grader/grader.py", line 39
    except AssertionError, error:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/grader/skeleton_grader'...
Listing './lib/python3.5/site-packages/grader/skeleton_grader/samples'...
Listing './lib/python3.5/site-packages/grader/skeleton_grader/samples/grader_files'...
Listing './lib/python3.5/site-packages/grader/skeleton_grader/samples/grader_files/naranjo project 3'...
Listing './lib/python3.5/site-packages/grader/skeleton_grader/samples/grader_files/oglesby project 3'...
Listing './lib/python3.5/site-packages/grader/skeleton_grader/samples/grader_files/simpson project 3'...
Listing './lib/python3.5/site-packages/grader-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
